# simplefin-data

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
simplefin-data/: Cargo.toml  README.md  README_TEMPLATE.md  update-readme.sh
simplefin-data/src/: account.rs  accountset.rs  connection.rs  error.rs  lib.rs  serde.rs  token.rs  transaction.rs  version.rs
simplefin-server/: Cargo.toml  README.md  README_TEMPLATE.md
simplefin-server/src/: lib.rs
simplefin-server/src/routes/: accounts.rs  claim.rs  create.rs  info.rs  mod.rs
simplefin-server/tests/: routes.rs
src/: account.rs  connection.rs  error.rs  lib.rs  transaction.rs
