[workspace]
members = ["simplefin-data", "simplefin-server"]
resolver = "3"

[workspace.dependencies]
async-trait = "0"
axum = { version = "0", features = ["macros"] }
chrono = { version = "0", features = ["serde"] }
derive_more = { version = "2", features = ["as_ref", "deref", "deref_mut"] }
rstest = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0", features = ["util"] }
url = { version = "2", features = ["serde"] }
utoipa = { version = "5", features = ["macros", "axum_extras"] }
utoipa-axum = { version = "0" }
