[package]
description = "An implementation of the SimpleFIN protocol server"
edition = "2024"
homepage = "https://github.com/kodebooth/simplefin/tree/main/simplefin-server"
license = "MIT"
name = "simplefin-server"
readme = "README.md"
repository = "https://github.com/kodebooth/simplefin"
version = "0.2.0"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
simplefin-data = { path = "../simplefin-data", features = ["axum"] }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
